# tutor-stack-notifier

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  update-root.yml
tests/: conftest.py  test_notifier.py
tutor_stack_notifier/: __init__.py  main.py
