[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tutor-stack-notifier"
version = "0.1.0"
description = "Notifier service for the Tutor Stack platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ahmed Sarhan", email = "ahmed.sarhan@example.com" }
]
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "httpx==0.27.0",
    "pytest-cov==4.1.0",
    "black==24.2.0",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0"
]

[tool.hatch.build.targets.wheel]
packages = ["tutor_stack_notifier"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100 